@@ -57,6 +57,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #10246: uu.encode didn't close file objects explicitly when filenames
+  were given to it.  Patch by Brian Brazil.
+
 - Issue #10198: fix duplicate header written to wave files when writeframes()
   is called without data.
 
